--- a/U-Net/CS2_firstCut.ipynb
+++ b/U-Net/CS2_firstCut.ipynb
@@ -1178,7 +1178,7 @@
       "source": [
         "!wget --referer = 'https://storage.googleapis.com/kaggle-competitions-data/kaggle-v2/14241/862020/bundle/archive.zip?GoogleAccessId=web-data@kaggle-161607.iam.gserviceaccount.com&Expires=1607663416&Signature=pTv1BPELLERpK4FdySc1GbTfUrYJoLXSrYnK9VLGlYFRMb0r4bHT3o%2F%2FyvB25%2FeVRWqtEfxJuz7QsjAafWJuHYvAmoPRk5Miy0HdRTJT78UxUFePt05OVxc%2BwgO69ArTvO7IlvStv3C6mujtLSEeejPvhtl9s7ZGq2F2MjY0%2F273sEAcxqv6rjFrTjaPOj6%2FEXPif8UQdQX78IAe3tDMg4M3bT6I5OwjCDAAb2vKeA3Yyhz8vDfEjt31gUsdkfW%2FLAQ%2FG2fZ00vGm7zrbIPWAFkIH%2FvK%2BdYA5g6y0zPlJHvFqvabHWWr9bEDc2Yg1WERJ3ViODNOXLkQzndw%2Fzn0zA%3D%3D&response-content-disposition=attachment%3B+filename%3Dseverstal-steel-defect-detection.zip' -O \"severstal-steel-defect-detection.zip\""
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1847,7 +1847,7 @@
       },
       "source": [
         "image_size = [] #list of tuples containing shape(height, width, channel) of images\n",
-        "for image_id in tqdm_notebook(listdir('train_images')):\n",
+        "for image_id in tqdm(listdir('train_images')):\n",
         "    img = cv2.imread(\"train_images/\"+image_id)\n",
         "    h, w, c = img.shape\n",
         "\n",
@@ -1950,7 +1950,7 @@
       },
       "source": [
         "test_image_size = [] #list of tuples containing shape(height, width, channel) of images\n",
-        "for image_id in tqdm_notebook(listdir('test_images')):\n",
+        "for image_id in tqdm(listdir('test_images')):\n",
         "    img = cv2.imread(\"test_images/\"+image_id)\n",
         "    h, w, c = img.shape\n",
         "\n",
